--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
         model: deepseek-r1:1.5b
       base-url: http://localhost:11434
     openai:
-      api-key: sk-916a0d3a9c66449db8685ff45a527345
+      api-key:
       chat:
         base-url: https://dashscope.aliyuncs.com/compatible-mode
         options:
