--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,13 @@ spring:
       chat:
         base-url: https://dashscope.aliyuncs.com/compatible-mode
         options:
-          model: qwen-plus
+          model: qwen-max-latest
+      embedding:
+        options:
+          model: text-embedding-v3
+          dimensions: 1024
+        base-url: https://dashscope.aliyuncs.com/compatible-mode
+        api-key: ${Qwen-API}
 
 server:
   port: 8088
